<resources>

    <string name="app_name">BMI</string>
    <string name="result">Result</string>
    <string name="length">Enter your heigth(cm)</string>
    <string name="weigth">Enter your weigth(Kg)</string>
    <string name="compute">Compute</string>
    <string name="reset">Reset</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_bmi">BMI</string>

</resources>